fixed registration cart spacing problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,8 @@
     justify-content: center;
     align-items: center;
 
-    width: 250px;
-    height: 250px;
+    width: 188px;
+    height: 188px;
     border-radius: 50%;
     background:
         radial-gradient(closest-side, white 79%, transparent 80% 100%),
